# Emberforge

./: .gitignore  LICENSE  README.md  pyproject.toml
.emberforge/: config.yaml
benchmarks/: RESULTS.md  compression_bench.py
emberforge/: __init__.py  agent.py  cli.py  core.py  evolve.py  gepa.py  repomap.py
emberforge/compressor/: __init__.py  ast_compress.py  polyglot.py  shell.py  tokens.py
emberforge/config/: settings.py
emberforge/context/: __init__.py
emberforge/evals/: __init__.py  tasks.py
emberforge/mcp/: __init__.py  client.py  server.py
emberforge/memory/: __init__.py
emberforge/providers/: __init__.py  base.py  openai_compat.py
emberforge/router/: __init__.py  classifier.py  router.py
emberforge/skills/: __init__.py
emberforge/tools/: __init__.py
forge/: __init__.py  cli.py  core.py
forge/compressor/: __init__.py  ast_compress.py  shell.py
forge/config/: settings.py
forge/context/: __init__.py
forge/memory/: __init__.py
forge/providers/: __init__.py  base.py  openai_compat.py
forge/router/: __init__.py  classifier.py  router.py
forge/skills/: __init__.py
tests/integration/: test_agent_loop.py  test_mcp_roundtrip.py
tests/unit/: test_classifier.py  test_compressor.py  test_evals.py  test_mcp_server.py  test_memory.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase7.py  test_phase8.py  test_phase9.py  test_tools.py
